infra/k8s/auth-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth
          image: mongo
          
---

apiVersion: v1
kind: Service
metadata:
  # Used to access this service inside the cluster
  name: auth-mongo-service 
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
